--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="styles/style.css" />
-    <link href="http://fonts.cdnfonts.com/css/arcade-classic" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/arcade-classic" rel="stylesheet">
     <title>Spacebed</title>
   </head>
   <body>
@@ -26,11 +26,12 @@
 
     <div class="game-over">
       <h1>Game Over!</h1>
+      <img src="./images/dylan2.png">
       <h2>You scored <span id="score"></span> points</h2>
       <p>Go to bed, or press the restart button</p>
       <button id="restart-button" class="gameStartButtons">Restart Game</button>
     </div>
-
+    
     <div class="sound-buttons">
       <button id="mute-button">Mute Music</button>
     </div>
