--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="game-over">
       <h1>Game Over!</h1>
-      <img src="../images/dylan2.png">
+      <img id="dylan2" src="../images/dylan2.png">
       <h2>You scored <span id="score"></span> points</h2>
       <p>Go to bed, or press the restart button</p>
       <button id="restart-button" class="gameStartButtons">Restart Game</button>
