some minor edits

--- a/index.html
+++ b/index.html
@@ -10,21 +10,18 @@
   </head>
   <body>
     <div class="game-intro">
-      <h1 class="title">Spacebed</h1>
+      <h1 class="title">Spacebed 5</h1>
       <br />
       <p>Travel through spacetime and avoid the asteroids</p>
       <p>Move your bed using the left and right arrow buttons</p>
       <button id="start-button" class="gameStartButtons">Start Game</button>
-
     </div>
 
     <div class="game-board">
       <canvas id="canvas" width="800" height="1000"></canvas>
     </div>
 
- 
-
-    <div class="game-over">
+     <div class="game-over">
       <h1>Game Over!</h1>
       <img id="dylan2" src="./images/dylan2.png">
       <h2>You scored <span id="score"></span> points</h2>
